fix compilation issues